Mon Feb 23 10:19:01 GMT 2004 (njh)
----------------------------------
  * libclamav: mbox: handle spaces before the : in headers e.g.
	Content-Type : application/octet-stream; name="eicar.com"

Mon Feb 23 00:43:44 CET 2004 (tk)
---------------------------------
  * libclamav: cl_rndnum: do not use buffered fread() (thanks to Nigel)

Sun Feb 22 22:59:39 GMT 2004 (njh)
----------------------------------
  * clamav-milter: Change the log level TCPwrapper denying
 			Handle ERROR message from clamd
 			Moved smfi_setconn to avoid race condictions when
 			an e-mail is received just as the milter is starting
 			but isn't ready to handle it causing the milter to
 			go to an error state
 			Hardend umask

Sun Feb 22 17:34:08 GMT 2004 (njh)
----------------------------------
  * clamav-milter/docs:	Documented the need to ensure that the directory
	  containing the sockets must be read/writeable by clamav if User is set

Sat Feb 21 16:05:42 CET 2004 (tk)
---------------------------------
  * freshclam: fixed problem with -u handling (missing `else' in logical block)
	       Thanks to Michel GAUDET <Michel.Gaudet*ehess.fr>. The same bug
	       (copy & paste) existed in -c mode.
  * configure: added CLAMAV_MILTER_LIBS

Sat Feb 21 13:38:23 CET 2004 (tk)
---------------------------------
  * libclamav: fixed various segmentation faults introduced by a small bug
	       in the yesterday's patch from Phil Oleson. Thanks to Nigel.

Sat Feb 21 11:09:12 GMT 2004 (njh)
----------------------------------
  * clamav-milter:	Don't run if the quarantine-dir is publically accessable

Fri Feb 20 23:21:42 CET 2004 (tk)
---------------------------------
  * configure: --enable-yp-check (use ypmatch utility instead of /etc/passwd
	       parsing) by James F.  Hranicky <jfh*cise.ufl.edu>.
  * clamdscan, libclamav: small code cleanups from Phil Oleson <oz*nixil.net>

Fri Feb 20 17:13:10 GMT 2004 (njh)
----------------------------------