@@ -26,6 +26,7 @@
 #include <unistd.h>
 #include <sys/stat.h>
 #include <sys/types.h>
+#include <sys/time.h>
 #include <sys/wait.h>
 #include <dirent.h>
 #include <sys/types.h>
@@ -33,7 +34,10 @@
 #include <netinet/in.h>
 #include <errno.h>
 #include <clamav.h>
-#include <sys/poll.h>
+
+#if HAVE_SYS_SELECT_H
+#include <sys/select.h>
+#endif
 
 #include "cfgfile.h"
 #include "others.h"
@@ -186,14 +190,15 @@ int scan(const char *filename, unsigned long int *scanned, const struct cl_node 
 
 int scanstream(int odesc, unsigned long int *scanned, const struct cl_node *root, const struct cl_limits *limits, int options, const struct cfgstruct *copt)
 {
-	int ret, portscan = CL_DEFAULT_MAXPORTSCAN, sockfd, port, acceptd, tmpd, bread, count;
+	int ret, portscan = CL_DEFAULT_MAXPORTSCAN, sockfd, port, acceptd, tmpd, bread, retval;
 	long int size = 0, maxsize = 0;
 	short bound = 0;
 	char *virname, buff[32768];
 	struct sockaddr_in server;
 	struct cfgstruct *cpt;
 	FILE *tmp = NULL;
-	struct pollfd poll_data[1];
+	fd_set rfds;
+	struct timeval tv;
 
     while(!bound && portscan--) {
 	if((port = cl_rndnum(60000)) < 1024)
@@ -223,23 +228,27 @@ int scanstream(int odesc, unsigned long int *scanned, const struct cl_node *root
 	mdprintf(odesc, "PORT %d\n", port);
     }
 
-    poll_data[0].fd = sockfd;
-    poll_data[0].events = POLLIN;
-    poll_data[0].revents = 0;
-
     while (1) {
-	count = poll(poll_data, 1, CL_DEFAULT_SCANTIMEOUT*1000); /* wait for timeout */
-	if (count != 1) {
-		if ((count == -1) && (errno == EINTR)) {
-			continue;
-		}
-		close(sockfd);
-		mdprintf(odesc, "ERROR\n");
-		logg("!ScanStream: accept timeout.\n");
-		return -1;
-	} else {
-		break;
+	FD_ZERO(&rfds);
+	FD_SET(sockfd, &rfds);
+	tv.tv_sec = CL_DEFAULT_SCANTIMEOUT;
+	tv.tv_usec = 0;	
+
+	retval = select(sockfd+1, &rfds, NULL, NULL, &tv);
+	switch (retval) {
+	case 0: /* timeout */
+	    mdprintf(sockfd, "ERROR\n");
+	    logg("!ScanStream: accept timeout.\n");
+	    return -1;
+	case -1:
+	    if (errno == EINTR) {
+		continue;
+	    }
+	    mdprintf(sockfd, "ERROR\n");
+	    logg("!ScanStream: select failed.\n");
+	    return -1;
 	}
+	break;
     }
 
     if((acceptd = accept(sockfd, NULL, NULL)) == -1) {
@@ -252,10 +261,11 @@ int scanstream(int odesc, unsigned long int *scanned, const struct cl_node *root
 
     logg("*Accepted connection on port %d, fd %d\n", port, acceptd);
 
-    poll_data[0].fd = acceptd;
-    poll_data[0].events = POLLIN;
-    poll_data[0].revents = 0;
-
+    FD_ZERO(&rfds);
+    FD_SET(acceptd, &rfds);
+    tv.tv_sec = CL_DEFAULT_SCANTIMEOUT;
+    tv.tv_usec = 0;
+    
     /* StreamSaveToDisk is enforced, to ensure timeoute */
     /*if(cfgopt(copt, "StreamSaveToDisk")) {	*/
 	if((tmp = tmpfile()) == NULL) {
@@ -271,7 +281,12 @@ int scanstream(int odesc, unsigned long int *scanned, const struct cl_node *root
 	if((cpt = cfgopt(copt, "StreamMaxLength")))
 	    maxsize = cpt->numarg;
 
-	while((count = poll(poll_data, 1, CL_DEFAULT_SCANTIMEOUT*1000)) == 1) {
+	while((retval = select(acceptd+1, &rfds, NULL, NULL, &tv)) == 1) {
+	    FD_ZERO(&rfds);
+	    FD_SET(acceptd, &rfds);
+	    tv.tv_sec = CL_DEFAULT_SCANTIMEOUT;
+	    tv.tv_usec = 0;
+	    
 	    bread = read(acceptd, buff, sizeof(buff));
 	    if (bread <= 0) {
 		break;
