@@ -1,3 +1,7 @@
+Mon Feb 23 10:42:25 GMT 2004 (trog)
+-----------------------------------
+  * clamd: use select() instead of poll()
+
 Mon Feb 23 10:19:01 GMT 2004 (njh)
 ----------------------------------
   * libclamav: mbox: handle spaces before the : in headers e.g.
